kubernetes/base/gotify/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      project: gotify
      component: gotify-server
  template:
    metadata:
      labels:
        project: gotify
        component: gotify-server
    spec:
      containers:
      - name: gotify
        image: gotify/server
        ports:
          - containerPort: 80
        volumeMounts:
        - mountPath: "/app/data"
          name: gotify-server-data
      volumes:
      - name: gotify-server-data
        persistentVolumeClaim:
          claimName: gotify-server-data
