kubernetes/base/gotify/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  selector:
    project: gotify
    component: gotify-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
