kubernetes/base/gotify/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  annotations:
    nginx.org/websocket-services: gotify
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify
            port:
              number: 80
  tls:
  - hosts:
    - example.com
    secretName: gotify-ingress-cert
